kubernetes/study/ingress/kubia-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: kubia
spec:
  tls:
  - hosts:
    - kubia.example.com
    secretName: tls-secret
  rules:
  - host: kubia.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: kubia-nodeport
            port:
              number: 80
